# AoSRollingTool

./: .gitignore  Cargo.toml  ImplementationPlan.md  README.md  opencode.json  run.sh
.opencode/agents/: build.md  debugger.md  doc-writer.md  git-committer.md  plan.md  reviewer.md  test-writer.md
resources/: units.json
src/: app.rs  main.rs
src/combat/: dice.rs  engine.rs  mod.rs  simulation.rs  types.rs
src/data/: loader.rs  models.rs
src/resources/: units.json
src/ui/: mod.rs
src/ui/panels/: combat_view.rs  log_panel.rs  mod.rs  recent_panel.rs  target_panel.rs  unit_panel.rs
src/ui/widgets/: dice_display.rs  histogram.rs  mod.rs  phase_result.rs
tools/convert/: Cargo.toml
tools/convert/src/: main.rs  models.rs
