[package]
name = "aos4-combat-roller"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29"
egui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
rayon = "1.10"
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
proptest = "1.4"
tempfile = "3.10"

[profile.release]
opt-level = 3
lto = true
